--- a/Spring2016/Computer Engineering Lab II/Lab2/Makefile
+++ b/Spring2016/Computer Engineering Lab II/Lab2/Makefile
@@ -1,10 +1,18 @@
-all: clean compile run
+all: clean compile
 
 clean:
 	rm -f *.out
 
 compile:
-	cc cache.c
+	cc cache.c -o a.out
+	cc cacheLRU.c -o b.out
 
-run:
+run fifo:
+	rm -f *.out
+	cc cache.c -o a.out
 	./a.out
+
+run lru:
+	rm -f *.out
+	cc cacheLRU.c -o b.out
+	./b.out
